Authentication-api - Cria os controllers e ajusta as mensagens
